API documentation is updated
